# copier-fastapi-ml

./: README.md  copier.yml
development/: .env  README.md  pyproject.toml
development/app/: main.py
development/app/api/: deps.py  main.py
development/app/api/routes/: auth.py
development/app/core/: __init__.py  config.py  db.py  logging.py  repository.py  security.py
development/app/entity/: user.py
development/app/schemas/: auth.py  refresh.py  web_response.py
development/deploy/: Dockerfile
development/tests/: conftest.py  test_config.py  test_security.py
development/tests/api/: test_auth.py
{{project_name}}/: .gitignore  LICENSE.jinja
{{project_name}}/app/api/: main.py.jinja
{{project_name}}/app/api/routes/: {% if use_auth %}auth.py{% endif %}
{{project_name}}/app/core/: config.py
{{project_name}}/deploy/: docker-compose.yaml.jinja
{{project_name}}/tests/: test_config.py.jinja
{{project_slug}}/: LICENSE.jinja  pyproject.toml.jinja
{{project_slug}}/app/api/: deps.py.jinja
{{project_slug}}/app/core/: __init__.py  db.py
{{project_slug}}/app/schemas/: web_response.py
{{project_slug}}/deploy/: docker-compose.yaml.jinja
{{project_slug}}/tests/: conftest.py  test_config.py.jinja
{{project_slug}}/tests/api/: {% if use_auth %}test_auth.py{% endif %}
